[package]
name = "gitea-bundle-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.2.7"
git2 = "0.17.1"
reqwest = { version = "0.11.17", features = ["blocking", "json"] }
serde = {version = "1.0.162", features = ["derive"]}
tempdir = "0.3.7"
